--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <link rel="stylesheet" href="Stylefinal.css">
+    <link rel="shortcut icon" type="image/x-icon"
+    href="https://preview.redd.it/the-new-linkin-park-logo-v0-hv9v9xb4s0nd1.jpeg?auto=webp&s=fcdf88162a7034b1b48a200cfbfdaa9ee68228ad" />
 
 </head>
 <body class="bg-gray-100">
